[package]
name = "ggml"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "cublas" ]
cublas = ["ggml-sys/cublas"]
opencl = []
rocm = []


[dependencies]
ggml-sys = { path = "../ggml-sys", features = [ "cublas" ] }
once_cell = "1.19.0"
serde = "1.0.193"
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
ggml-proc-macro = { path = "../ggml-proc-macro" }
gguf = { path = "../gguf" }
